[project]
name = "essentials"
version = "0.1.0"
description = ""
authors = [{ name = "Matt Norris", email = "matt@mattnorris.dev" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = []

[tool.uv.workspace]
members = [
    "tools/python/core_github",
    "tools/python/gcp_gemini",
]
