[tool.poetry]
name = "colors"
version = "0.1.0"
description = ""
authors = ["Matt <matnorri@cisco.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
colorspacious = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
closest = "src.colors.main:run_closest_color"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
