[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python_template"
version = "0.1.0"
description = ""
authors = [ "Matt <matnorri@cisco.com>",]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"
flake8 = "^4.0.1"
flake8-colors = "^0.1.9"
pre-commit = "^2.16.0"
commitizen = "^2.20.0"
toml = "^0.10.2"

[tool.poetry.scripts]
make-pre-commit-config = "python_scripts.pre_commit_config_yaml:make"
update-pyproject = "python_scripts.pyproject_toml:update"
