[project]
name = "gcp-gemini"
version = "0.1.0"
description = ""
authors = [{ name = "Matt Norris", email = "matt@mattnorris.dev" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pulumi>=3.182.0",
    "pulumi-gcp>=8.38.0",
    "google-cloud-aiplatform>=1.75.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gcp_gemini"]
