[project]
name = "langsmith-hosting"
version = "0.1.0"
description = "LangSmith Hybrid infrastructure on AWS provisioned with Pulumi"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pulumi>=3.0.0",
    "pulumi-aws>=6.0.0",
    "pulumi-awsx>=2.0.0",
    "pulumi-eks>=3.0.0",
    "pulumi-kubernetes>=4.0.0",
    "pulumi-random>=4.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langsmith_hosting"]
