[project]
name = "langsmith-hosting"
version = "0.1.0"
description = "LangSmith Hybrid infrastructure on AWS provisioned with Pulumi"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3==1.42.85",
    "click>=8.1",
    "langsmith-network",
    "pulumi>=3.0.0",
    "pulumi-aws>=6.0.0",
    "pulumi-awsx>=2.0.0",
    "pulumi-eks>=3.0.0",
    "pulumi-kubernetes>=4.0.0",
    "pulumi-random>=4.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[tool.uv.sources]
langsmith-network = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langsmith_hosting"]

[project.scripts]
langsmith-hosting = "langsmith_hosting.cli:cli"
