[project]
name = "pulumi-utils"
version = "0.1.0"
description = "Common utilities for Pulumi projects"
authors = [{ name = "Matt Norris", email = "matt@mattnorris.dev" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = ["pulumi>=3.202.0,<4.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pulumi_utils"]
